examples/test/testpolicy13270.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13270
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key13: value13
      key15: value22
      key12: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value2
      podSelector:
        matchLabels:
          key24: value24
          key32: value47
          key13: value15
